samples/_failures_safe/1761263707_9fc6ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95f11f40.c: In function ‘main’:
./samples/SAFE/__tmp_95f11f40.c:179:5: error: expected declaration or statement at end of input
  179 |     if (!fgets(input, sizeof(input), stdin)) {
      |     ^~
./samples/SAFE/__tmp_95f11f40.c:179:5: error: expected declaration or statement at end of input
